# StreamX-Ultra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_DELETION.md  DISCLAIMER.md  LICENSE  PRIVACY_POLICY.md  README.md  ROADMAP.md  SECURITY.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: data_deletion_request.md
.github/workflows/: android-build.yml  create_release.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ai_engine.cpp  ai_engine.hpp  native-lib.cpp  torrent-engine.cpp  torrent_system.hpp  vcpkg.json
app/src/main/java/com/aeoncorex/streamx/: MainActivity.kt
app/src/main/java/com/aeoncorex/streamx/data/: MovieRepository.kt
app/src/main/java/com/aeoncorex/streamx/model/: Channel.kt  ChatMessage.kt  Event.kt  GitHubRelease.kt  LiveEvent.kt  Movie.kt
app/src/main/java/com/aeoncorex/streamx/navigation/: AppNavigation.kt
app/src/main/java/com/aeoncorex/streamx/services/: EmailService.kt  UpdateChecker.kt
app/src/main/java/com/aeoncorex/streamx/ui/about/: AboutScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/account/: AccountScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/admin/: AdminActivity.kt  AdminAppScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/auth/: AuthScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/copyright/: CopyrightScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/events/: EventsScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/home/: HomeScreen.kt  HomeViewModel.kt  LiveTVScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/livetv/: LiveTVScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/main/: MainScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/movie/: AdBlockWebView.kt  ConsumetProvider.kt  MovieDetailScreen.kt  MovieDetailsScreen.kt  MovieHomeScreen.kt  MovieLinkSelectionScreen.kt  MovieModels.kt  MoviePlayerScreen.kt  MoviePreferences.kt  MovieRepository.kt  MovieScreen.kt  MovieServerSelectionScreen.kt  MovieSettingsScreen.kt  MovieViewModel.kt  StreamState.kt  TorrentEngine.kt  TorrentModels.kt  TorrentProviders.kt  TorrentRepository.kt
app/src/main/java/com/aeoncorex/streamx/ui/music/: MusicManager.kt  MusicModels.kt  MusicPlayerScreen.kt  MusicScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/onboarding/: OnboardingScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/player/: PlayerScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/privacy/: PrivacyPolicyScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/settings/: SettingsScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/splash/: SplashScreen.kt
app/src/main/java/com/aeoncorex/streamx/ui/theme/: Color.kt  Theme.kt  ThemeScreen.kt  ThemeViewModel.kt  Type.kt
app/src/main/java/com/aeoncorex/streamx/util/: ChannelCategorizer.kt  ChannelGenre.kt
app/src/main/res/drawable/: facebook_logo.xml  github_logo.xml  google_logo.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
